ads api updates
